--- a/frontend/src/styles/pilot.css
+++ b/frontend/src/styles/pilot.css
@@ -1,20 +1,15 @@
 .pilotContainer{
-
+  font-size: small;
   margin-top: 2.5em;
-  display: flex;
-  flex-direction: row;
+  display: grid;
 
-  flex-wrap: wrap;
+  gap: 1em;
+  grid-template-columns: repeat(5, 1fr);
 
-  justify-content: space-around;
-  align-items: normal;
-  width: 100%;
 }
 
 .pilotCard{
-  flex: 1 1 290px;
-  margin: 0.5em;
-  padding: 1em;
+
 
   border-radius: 10px;
   background-color: #E28413;
