--- a/frontend/src/styles/header.css
+++ b/frontend/src/styles/header.css
@@ -40,6 +40,12 @@
     );
 }
 
+@media (max-width: 1000px) {
+  .headerTitle {
+    font-size: 2.5em;
+  }
+}
+
 @media (max-width: 750px){
   .headerTitle{
     font-size: 1.5em;
