--- a/frontend/src/styles/pilot.css
+++ b/frontend/src/styles/pilot.css
@@ -23,17 +23,30 @@
   box-shadow: 0 0 10px #EB8F1E;  
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1350px) {
+  .pilotContainer{
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 1100px) {
   .pilotContainer{
     grid-template-columns: repeat(3, 1fr);
   }
 }
-  
-@media (max-width: 500px) {
+
+@media (max-width: 820px) {
   .pilotContainer{
     grid-template-columns: repeat(2, 1fr);
-    gap: 0.5em;
+  }
+}
+  
+@media (max-width: 580px) {
+  .pilotContainer{
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1em;
     font-size: x-small;
-    padding: 0em;
+    padding: 0.3em;
+    line-height: 1;
   }
 }
